--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.2",
     "html-loader": "^0.5.5",
     "knex": "^0.14.3",
+    "materialize": "^1.0.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
     "objection": "^1.0.0",
