--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "extract-loader": "^1.0.2",
+    "file-loader": "^1.1.9",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^2.30.1",
     "knex": "^0.14.3",
     "materialize": "^1.0.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.2",
     "objection": "^1.0.0",
+    "raw-loader": "^0.5.1",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.1"
   },
